--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,7 @@ img{
 #main{
     height: auto;
     border-style: inset;
+    border-width: 0.3vw;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -59,4 +60,38 @@ img{
 #bombs, #time{
     height:100%;
     font-size: 100%;
+}
+#options-outer{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    opacity: 0.8;
+    background-color: gray;
+}
+#options-inner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 40vh;
+    width: 40vw;
+    opacity: 0.8;
+    background-color: black;
+    color: white;
+}
+@media (orientation: portrait){
+    #options-inner{
+        width: 90vw;
+    }
+}
+
+#error{
+    color: red;
+    text-align: center;
+}
+input[type="number"]:disabled{
+    color: white;
 }
